[project]
name = "civic-lens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cloudinary>=1.44.1",
    "fastapi>=0.128.8",
    "openai>=2.24.0",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-ai>=0.8.1",
    "pydantic-settings>=2.11.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
    "streamlit>=1.50.0",
    "uvicorn>=0.39.0",
]
